# luxrender

./: Example Scene.rar
lux/: AUTHORS.txt  CMakeLists.txt  License.md  Readme.md  config.h.cmake  lux.spec  makeBuildNumber.py  splash.xcf
lux/accelerators/: bruteforce.cpp  bruteforce.h  bvhaccel.cpp  bvhaccel.h  qbvhaccel.cpp  qbvhaccel.h  sqbvhaccel.cpp  sqbvhaccel.h  tabreckdtree.cpp  tabreckdtreeaccel.h  unsafekdtree.cpp  unsafekdtreeaccel.h
lux/cameras/: environment.cpp  environment.h  orthographic.cpp  orthographic.h  perspective.cpp  perspective.h  realistic.cpp  realistic.h
lux/cmake/: Dependencies.cmake  FindFFTW.cmake  FindFreeImage.cmake  FindFreeImage.cxx  FindPNG.cmake  FindPkgMacros.cmake  documentation.cmake  liblux.cmake  luxcomp.cmake  luxconsole.cmake  luxmerger.cmake  luxrender.cmake  luxvr.cmake  macosx_bundle.cmake  pylux.cmake
lux/cmake/SpecializedConfig/: Config_Dade.cmake  Config_Foobarbarian.cmake  Config_LordCrc2008.cmake  Config_OSX.cmake  Config_Zsolnai.cmake
lux/console/: commandline.cpp  commandline.h  luxconsole.cpp
lux/core/: api.cpp  api.h  asyncstream.cpp  asyncstream.h  bsh.h  camera.cpp  camera.h  cameraresponse.cpp  cameraresponse.h  context.cpp  context.h  contribution.cpp  contribution.h  dynload.cpp  dynload.h  error.h  exrio.cpp  exrio.h  fastmutex.h  filedata.cpp  filedata.h  film.cpp  film.h  filter.h  igiio.cpp  igiio.h  imagereader.cpp  imagereader.h  kdtree.h  light.cpp  light.h  lux.h  luxlex.l  luxparse.y  material.cpp  material.h  mipmap.h  octree.h  osfunc.cpp  osfunc.h  (+43 more)
lux/core/geometry/: matrix2x2.h  matrix3x3.h  raydifferential.cpp  raydifferential.h  (+1 more)
lux/cpp_api/: dllmain.cpp  export_defs.h  lux_api.cpp  lux_api.h  lux_instance.h  lux_paramset.h  lux_wrapper_factories.cpp
lux/doxygen/: doxygen.template
lux/film/: fleximage.cpp  fleximage.h
lux/filters/: blackmanharris.cpp  blackmanharris.h  box.cpp  box.h  catmullrom.cpp  catmullrom.h  gaussian.cpp  gaussian.h  mitchell.cpp  mitchell.h  sinc.cpp  sinc.h  triangle.cpp  triangle.h
lux/integrators/: bidirectional.cpp  bidirectional.h  directlighting.cpp  directlighting.h  distributedpath.cpp  distributedpath.h  emission.cpp  emission.h  exphotonmap.cpp  exphotonmap.h  igi.cpp  igi.h  multi.cpp  multi.h  none.cpp  none.h  path.cpp  path.h  single.cpp  single.h  sppm.cpp  sppm.h
lux/lights/: area.cpp  distant.cpp  distant.h  infinite.cpp  infinite.h  infinitesample.cpp  infinitesample.h  pointlight.cpp  pointlight.h  projection.cpp  projection.h  sky.cpp  sky.h  sky2.cpp  sky2.h  spot.cpp  spot.h  sun.cpp  sun.h
lux/materials/: carpaint.cpp  carpaint.h  cloth.cpp  cloth.h  doubleside.cpp  doubleside.h  glass.cpp  glass.h  glass2.cpp  glass2.h  glossy.cpp  glossy.h  glossy2.cpp  glossy2.h  glossytranslucent.cpp  glossytranslucent.h  layeredmaterial.cpp  layeredmaterial.h  matte.cpp  matte.h  mattetranslucent.cpp  mattetranslucent.h  metal.cpp  metal.h  metal2.cpp  metal2.h  mirror.cpp  mirror.h  mixmaterial.cpp  mixmaterial.h  null.cpp  null.h  roughglass.cpp  roughglass.h  scattermaterial.cpp  scattermaterial.h  shinymetal.cpp  shinymetal.h  velvet.cpp  velvet.h
lux/pixelsamplers/: hilbertpx.cpp  hilbertpx.h  linear.cpp  linear.h  lowdiscrepancypx.cpp  lowdiscrepancypx.h  tilepx.cpp  tilepx.h  vegas.cpp  vegas.h
lux/python/: binding.cpp  binding.h  pycontext.h  pydoc.h  pydoc_context.h  pydoc_renderserver.h  pydynload.h  pydynload_generator.py  pyfleximage.h  pylux-epydoc.prj  pyluxconsole.py  pyrenderserver.h
lux/qtgui/: aboutdialog.cpp  aboutdialog.hxx  advancedinfowidget.cpp  advancedinfowidget.hxx  colorspacewidget.cpp  colorspacewidget.hxx  gammawidget.cpp  gammawidget.hxx  guiutil.cpp  guiutil.h  histogramview.cpp  histogramview.hxx  histogramwidget.cpp  histogramwidget.hxx  lenseffectswidget.cpp  lenseffectswidget.hxx  lightgroupwidget.cpp  lightgroupwidget.hxx  luxapp.cpp  luxapp.hxx  main.cpp  mainwindow.cpp  mainwindow.hxx  noisereductionwidget.cpp  renderview.cpp  renderview.hxx  tonemapwidget.cpp
lux/renderers/: hybridrenderer.cpp  hybridrenderer.h  hybridsamplerrenderer.cpp  hybridsamplerrenderer.h  luxcorerenderer.cpp  luxcorerenderer.h  samplerrenderer.cpp  samplerrenderer.h  sppmrenderer.cpp  sppmrenderer.h
lux/samplers/: erpt.cpp  erpt.h  lowdiscrepancy.cpp  lowdiscrepancy.h  metrosampler.cpp  metrosampler.h  random.cpp  random.h  sobol.cpp  sobol.h
lux/server/: renderserver.cpp  renderserver.h
lux/shapes/: cone.cpp  cone.h  cylinder.cpp  cylinder.h  deferred.cpp  deferred.h  disk.cpp  disk.h  hairfile.cpp  hairfile.h  heightfield.cpp  heightfield.h  hyperboloid.cpp  hyperboloid.h  lenscomponent.cpp  lenscomponent.h  loopsubdiv.cpp  loopsubdiv.h  mesh.cpp  mesh.h  meshbarytriangle.cpp  meshmicrodisplacementtriangle.cpp  meshquadrilateral.cpp  meshwaldtriangle.cpp  nurbs.cpp  nurbs.h  paraboloid.cpp  paraboloid.h  plymesh.cpp  plymesh.h  sphere.cpp  sphere.h  stlmesh.cpp  stlmesh.h  torus.cpp  torus.h
lux/textures/: add.cpp  add.h  band.cpp  band.h  bilerp.cpp  bilerp.h  blackbody.cpp  blackbody.h  blender_base.cpp  blender_base.h  blender_blend.cpp  blender_blend.h  blender_clouds.cpp  blender_clouds.h  blender_distortednoise.cpp  blender_distortednoise.h  blender_magic.cpp  blender_magic.h  blender_marble.cpp  blender_marble.h  blender_musgrave.cpp  blender_musgrave.h  blender_noise.cpp  blender_noise.h  blender_stucci.cpp  blender_stucci.h  blender_texlib.cpp  blender_texlib.h  blender_voronoi.cpp  blender_voronoi.h  blender_wood.cpp  blender_wood.h  brick.cpp  brick.h  cauchytexture.cpp  cauchytexture.h  checkerboard.cpp  checkerboard.h  cloud.cpp  cloud.h  (+56 more)
lux/tonemaps/: contrast.cpp  contrast.h  falsecolors.cpp  falsecolors.h  lineartonemap.cpp  lineartonemap.h  maxwhite.cpp  maxwhite.h  nonlinear.cpp  nonlinear.h  reinhard.cpp  reinhard.h
lux/tools/: luxcomp.cpp  luxmerger.cpp
lux/volumes/: clearvolume.cpp  clearvolume.h  cloudvolume.cpp  cloudvolume.h  exponentialvolume.cpp  exponentialvolume.h  heterogeneous.cpp  heterogeneous.h  homogeneous.cpp  homogeneous.h  volumegrid.cpp  volumegrid.h
lux/vr/: luxvr.cpp
(+726 files in other folders)
